src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/CD4AC0034.cd
package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram CD4AC0034 {
  class A {
    String a = null;
    / String a1;
    
    String b = "b";
    / String b1;
    
    int c = 1;
    / int c1;
  }
}
