src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0034.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0034 {
  class A {
    / String a = null;
    / String b = "b";
    / int c = 1;
  }
}
